# django-start

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  copier.yml  pyproject.toml  render.yaml
.claude/: settings.json
.claude/skills/django/: SKILL.md
.claude/skills/django-testing/: SKILL.md
.claude/skills/django/references/: config.md  forms.md  htmx.md  migrations.md  models.md  packages.md  queries.md  security-checklist.md  templates.md  views-urls.md
.github/workflows/: ci.yml  template-ci.yml
config/: urls.py
config/settings/: common.py  local.py  production.py  test.py
core/: admin.py  apps.py  checks.py  models.py  tests.py  views.py
core/management/commands/: seed_db.py
core/migrations/: 0001_initial.py
